@@ -1,6 +1,7 @@
 2.0.0b2
  - fix: don't use area_um, deform, and bright_avg box filters by
    default (#19)
+ - fix: bug+regression when removing plots
 2.0.0b1
  - feat: automatically rescale plot windows (#8)
  - feat: add auto XY-range checkbox for plotting (#9)
